src/styles/Project.css
.ProjectContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 30px 70px;
}

.ProjectImageContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  filter: opacity(50%);
  transition: filter 0.3s ease-in-out;
  cursor: pointer;
}

.ProjectImageContainer:hover {
  filter: opacity(100%);
}

.ProjectImage {
  width: 300px;
  height: 150px;
  object-fit: cover;
}

